--- a/example/example.css
+++ b/example/example.css
@@ -1,13 +1,14 @@
-@critical;
+@critical test1.css test2.css {
 
-.foo {
-  display: flex;
-  width: calc(100% - 200px);
-}
+  .foo {
+    display: flex;
+    width: calc(100% - 200px);
+  }
 
-.bar {
-  border: 10px solid gold;
-  height: 100%;
+  .bar {
+    border: 10px solid gold;
+    height: 100%;
+  }
 }
 
 .baz::before {
