Update: switch from .babelrc to .babelrc.json; test alt notation in example.css

--- a/example/example.css
+++ b/example/example.css
@@ -1,6 +1,8 @@
 @critical test1.css test2.css {
 
   .foo {
+    critical-selector: this;
+    critical-filename: test1.css test2.css;
     display: flex;
     width: calc(100% - 200px);
   }
