--- a/test/fixtures-no-preserve/media-this.non-critical.actual.css
+++ b/test/fixtures-no-preserve/media-this.non-critical.actual.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 1024px) {
+	.foo {
+		display: flex;
+		width: calc(100% - 200px);
+	}
 
 	.bar {
 		border: 10px solid gold;
